src/tests/snapshots/cendol__tests__semantic_incomplete_type__rejects_sizeof_on_incomplete_array.snap
---
source: src/tests/semantic_incomplete_type.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: Invalid application of 'sizeof' to an incomplete type
Span: SourceSpan(source_id=SourceId(2), start=68, end=79)
